force-app/main/default/objects/ssot__ApplicationTask__dlm/fields/ssot__ApplicationDecisionId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ApplicationDecisionId__c</fullName>
    <label>Application Decision Id</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ApplicationDecisionId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>