force-app/main/default/objects/ssot__ApplicationTask__dlm/fields/ssot__rel_1719819537272_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719819537272_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ApplicationTask_PreliminaryApplicati_rel</label>
    <referenceTo>ssot__SavedApplicationReference__dlm</referenceTo>
    <relationshipLabel>ApplicationTask_PreliminaryApplicati_rel</relationshipLabel>
    <relationshipName>rel_1719819537272_end</relationshipName>
    <type>Lookup</type>
</CustomField>