force-app/main/default/objects/ssot__ApplicationTask__dlm/fields/ssot__rel_1732247635673_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1732247635673_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ApplicationTask_ApplicationDecisionI_rel</label>
    <referenceTo>ssot__ApplicationDecision__dlm</referenceTo>
    <relationshipLabel>ApplicationTask_ApplicationDecisionI_rel</relationshipLabel>
    <relationshipName>rel_1732247635673_end</relationshipName>
    <type>Lookup</type>
</CustomField>