force-app/main/default/objects/ssot__ApplicationTask__dlm/fields/ssot__rel_1732247640960_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1732247640960_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ApplicationTask_ApplicationReviewId__rel</label>
    <referenceTo>ssot__ApplicationReview__dlm</referenceTo>
    <relationshipLabel>ApplicationTask_ApplicationReviewId__rel</relationshipLabel>
    <relationshipName>rel_1732247640960_end</relationshipName>
    <type>Lookup</type>
</CustomField>