force-app/main/default/objects/ssot__ApplicationTask__dlm/fields/ssot__SavedApplicationURL__c.field-meta.xml
<CustomField>
    <fullName>ssot__SavedApplicationURL__c</fullName>
    <label>Saved Application URL</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SavedApplicationURL</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>